column bleed bug fixed in level select menus

--- a/style.css
+++ b/style.css
@@ -31,12 +31,14 @@ body {
     -moz-column-gap:40px; /* Firefox */
     -webkit-column-gap:40px; /* Safari and Chrome */
     /*column-fill: balance;*/
+
     position:relative;
     top: 90px;
     background: black;
     width: 1300px;
     display: block;
     margin: 0 auto;
+    clear: both;
 }
 
 
@@ -110,7 +112,7 @@ h1 {margin-top: 5%;}
     left: 0; 
     border-top: 5px solid white;
     border-bottom: 5px solid white;
-    padding: 10px;
+    padding: 12px;
     text-decoration: none;
     margin: 0 auto; 
 }
@@ -164,15 +166,12 @@ a#start{top: 100%;}
 
 #levelText {
     top: 20px;
+    right: 20px;
     width: 100%;
     text-align: right;
     position: absolute;        
     font: 30px "Press Start 2P", cursive; 
     color: white;
-}
-
-.helper {
-    padding-right: 20px;
 }
 
 #helperText {
